--- a/CSS/autostyles.css
+++ b/CSS/autostyles.css
@@ -341,24 +341,26 @@ copying the same attribute for each individual button.
         fill: #edc655;
     }
     50% {
-        fill: #fcffad
+        fill: #fcffad;
     }
     100% {
         fill: #f76414;
     }
 }
 
+/*
 @keyframes color-change {
     0% {
         fill: #edc655;
     }
     50% {
-        fill: #fcffad
+        fill: #fcffad;
     }
     100% {
         fill: #f76414;
     }
 }
+*/
 
 /*.sun {
   animation-duration: 4s;
