--- a/CSS/autostyles.css
+++ b/CSS/autostyles.css
@@ -136,10 +136,10 @@ button:focus {
 
 .profile_portrait {
     float: left;
-    width: 170px;
-    margin-right: 50px;
-    height: auto;
-    border-radius: 50%;
+    width: 190px;
+    margin-right: 30px;
+    height: 300px;
+    border-radius: 20%;
 }
 
 .page-footer {
@@ -158,6 +158,7 @@ button:focus {
 .profile {
     max-width: 700px;
     margin: 0 auto;
+    position: static;
 }
 
 * {
@@ -203,7 +204,7 @@ button:focus {
     display: -ms-grid;
     display: grid;
     -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     /* When making grids, "colums" needed to be specified but "rows" will auto grow*/
     grid-gap: 20px
     /* When browser is being changed then grid-gap will keep it alighned with the page*/
@@ -487,3 +488,32 @@ $color-black: #000;
   box-shadow: 4px 3px 19px 0px rgba(0, 0, 0, 0.3);
 }
 */
+
+.noBorder {
+    border: none;
+}
+
+.Lsidebar {
+    position: absolute;
+    left: 0;
+    border: 2px solid grey;
+    height: 782px;
+    width: 270px;
+}
+
+.Rsidebar {
+    position: absolute;
+    right: 0;
+    border: 2px solid grey;
+    height: 469px;
+    width: 270px;
+}
+
+.BRsidebar {
+    position: absolute;
+    margin-top: 48px;
+    right: 0;
+    border: 2px solid grey;
+    height: 312px;
+    width: 270px;
+}
