--- a/CSS/autostyles.css
+++ b/CSS/autostyles.css
@@ -34,7 +34,7 @@ div {
 
 body {
     background-color: lightgray;
-    font-family: "Krona One", sans-serif;
+    font-family: 'Slabo 27px', serif;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.6;
@@ -138,7 +138,7 @@ button:focus {
     float: left;
     width: 190px;
     margin-right: 30px;
-    height: 300px;
+    height: 210px;
     border-radius: 20%;
 }
 
@@ -163,7 +163,7 @@ button:focus {
 
 * {
     -webkit-box-sizing: border-box;
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
 }
 
 .page-header {
@@ -497,23 +497,47 @@ $color-black: #000;
     position: absolute;
     left: 0;
     border: 2px solid grey;
-    height: 782px;
+    height: 510px;
     width: 270px;
+    font-size: 18px;
 }
 
 .Rsidebar {
     position: absolute;
     right: 0;
     border: 2px solid grey;
-    height: 469px;
+    height: 300px;
     width: 270px;
+    font-size: 16px;
 }
 
 .BRsidebar {
     position: absolute;
-    margin-top: 48px;
+    /* padding-bottom: 100px; */
     right: 0;
-    border: 2px solid grey;
-    height: 312px;
+    border: 1px solid grey;
+    height: 191px;
     width: 270px;
+    font-size: 14px;
+}
+
+th {
+    border-style: outset;
+}
+
+.outsetBorder {
+    border-style: outset;
+    width: 300px;
+    margin: 50px 50px 50px 500px;
+}
+
+.backG {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    /* background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover; */
+    z-index: -1;
+    left: 0;
 }
